@@ -5,6 +5,7 @@ Jython 2.7a1
 
 Jython 2.5.3b2
   Bugs Fixed
+    - [ 1871 ] Relative import in module gets imported to top level (regression)
     - [ 1854 ] set().pop() race condition
     - [ 1730 ] functools.partial incorrectly makes __doc__ property readonly
     - [ 1537 ] expat: org.python.apache.xerces.parsers.SAXParser
